style.css
:root {
    /*for font-size: 100% -> rem = 16px (by default)*/
    font-size: 62.5%; /*-> rem = 10px*/
    font-family: "Audiowide", sans-serif;
    text-transform: capitalize;
    --initialSidebarWidth: 50rem;
    --sidebarAudioSpacing: 0.5rem;
    --backgroundColorInput: rgba(0, 0, 0, 0.704);
    --backgroundColorOddElement: rgba(255, 255, 255, 0.05);
    --backgroundColorEvenElement: rgba(162, 162, 162, 0.05);
    --backgroundColorElementCategoryHover: rgba(0, 0, 0, 0.8);
    --textColorInput: rgb(239, 239, 239);
    --textColorVariable: rgb(222, 215, 215, 0.9);
    --textColorCategory: rgb(24, 84, 214);
    --textColorCategoryAlpha050: rgba(24, 84, 214, 0.822);
    --shadowColorCategory: rgb(16, 236, 148);
    --resizerWidth: 0.7rem;
}

html, body {
    width: 100%;
    height: 100%;
    user-select: none;
    display: flex;
    /* background-color: #fff; */
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

#container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#canvas1{
    position: absolute;
    top: 0; 
    left: 0;
    width: 100%;
    height: 100%;
    /* z-index: 10; */
    /* filter: blur(5px); */
}

.sidebar {
    position: relative;
    /* position: absolute; */
    height: 100%;
    width: var(--initialSidebarWidth);
    height: 100%;
    /* height: 100wh; */
    overflow-x: hidden;
    background-color: rgba(255, 255, 255, 0.209);
    text-align: center;
    padding-right: var(--resizerWidth); /* to compensate resizer width*/ 
    margin: 0;
}

.resizer {
    position: absolute;
    overflow: hidden;
    width: var(--resizerWidth);
    height: 100%;
    /* left: 0; */
    right: 0;
    cursor: col-resize;
    background-color: var(--textColorCategoryAlpha050);
}

::-webkit-scrollbar{
    /* width: 0rem; */
    display: none;
}

#fileupload {
    font-size: 1.6rem;
    z-index: 100; /* always on top on other elements */
    cursor: pointer;
    font-family: "Audiowide", sans-serif;
    width: 80%;
    border-radius: 0.5rem;
}

input::file-selector-button {
    font-family: "Audiowide", sans-serif;
    color: var(--textColorVariable);
    background-color: var(--textColorCategory);
    /* padding: 0.5em; */
    border-radius: 0.5rem;
    /* margin: 0.2rem; */
    cursor: pointer;
}

select{
    font-size: 1.6rem;
    background-color: var(--backgroundColorInput);
    color: var(--textColorInput);
    cursor: pointer;
    font-family: "Audiowide", sans-serif;
    border-radius: 0.5rem;
    width: 60%;
}

input {
    background-color: var(--backgroundColorInput);
    color: var(--textColorInput);
}

input[type="range"] {
    width: calc(98% - 6rem); /* 4.5rem because text input width is not enough and it changes line*/
    height: 0.5rem;
    cursor: pointer;
    margin-left: 0.1rem;
    /* margin-top: -1rem; */
    /* -webkit-appearance: none; */
    /* background: rgba(178, 174, 174, 0.6); */
    /* border-radius: 0rem; */
    /* background-image: linear-gradient(#fb5b26, #a1320a); */
    /* background-size: 100% 100%; */
    /* background-repeat: no-repeat; */
}

input[type="text"] {
    width: 5.5rem;
    margin-right: 0.1rem; /*for spacing between the resize bar*/
    border-radius: 0.3rem;
    height: 2rem;
    font-family: "Audiowide", sans-serif;
    font-size: 1.3rem;
    margin-bottom: 0.3rem; /*to make outer div higher*/
    /* display: block; */
}

input[type="color"] {
    width: 98%;
    border-radius: 0.5rem;
    cursor: pointer;
}

.sidebarCategory{
    background-color: rgba(0, 0, 0, 0.5);
    font-size: 3.2rem;
    border-radius: 1.5rem;
    padding: 0.5rem;
    font-weight: 600;
    margin: 0.5rem 0.2rem;
    cursor: pointer;
    color:var(--textColorCategory);
    text-shadow: 1px -1px 1px var(--shadowColorCategory);
    margin: 1rem;
    overflow: hidden;
    /* border-color: red;
    border-width: 2rem; */
}

.sidebarCategory > *{
    text-shadow: none;
    border-radius: 1rem;
}

.sidebarCategory:hover{
    box-shadow: 0 0 8px var(--shadowColorCategory);
    text-shadow: 3px -2px 1px var(--shadowColorCategory);
    outline: 2px solid var(--shadowColorCategory);
    background: var(--backgroundColorElementCategoryHover);
    transition: 1s ease-in;
}

.sidebarInsideCategoryElements{
    /* background-color: bisque; */
    cursor: auto;
    font-size: 2rem;
    /* transition: 1s; */
}

.sidebarElement{
    font-size: 2rem;
    font-weight: 400;
    padding: 0.2rem 0rem;
    border-radius: 0.5rem;
    margin: 0.5rem 0rem;
    color: var(--textColorVariable);
}

.sidebarElement:nth-child(odd) {
    background: var(--backgroundColorOddElement);
}

.sidebarElement:nth-child(even) {
    background: var(--backgroundColorEvenElement);
}

.sidebarElement:hover {
    background-color: var(--textColorCategoryAlpha050);
    box-shadow: 1px -1px 3px var(--shadowColorCategory);
    text-shadow: 3px -2px 0px black;
    transition: 0.5s ease;
}

.slider > p {
    margin-bottom: -1.2rem;
}

.showHideButton{
    position: absolute;
    font-size: 5rem;
    border-radius: 0 1rem 1rem 0;
    text-align: center;
    padding: 1rem 1rem;
    color: rgba(1,1,1,0.8);
    background-color: rgba(255, 255, 255, 0.15);
}

.showHideButton:hover{
    cursor: pointer;
}

#openMenuButton{
    position: absolute;
    display: none;
    border-radius: 2rem;
    z-index: 100;
    margin: 0.5rem;
}

#hideMenuButton{
    top: calc(50% - 4.8rem); /*minus button height hardcoded*/
    left: var(--initialSidebarWidth);
    font-size: 1.5rem;
    background: var(--textColorCategory);
    padding: 4rem 0.2rem;
    border-radius: 0 1rem 1rem 0;
}

#audioContainer{
    position:absolute;
    /* top: 2rem; */
    bottom: 0.5rem;
    width: calc(100% - var(--initialSidebarWidth));
    left:  var(--initialSidebarWidth);
    justify-content: center;
}

#hideAudioButton{
    position: relative;
    left: calc(50% - 4.8rem); /*minus button width hardcoded*/
    font-size: 1.5rem;
    padding: 0.2rem 4rem;
    border-radius: 1rem 1rem 0 0;
    /* background-color: rgba(255, 255, 255, 0.4); */
    background: var(--textColorCategory);
}

#openAudioButton{
    position: absolute;
    left: calc(var(--sidebarAudioSpacing) + var(--initialSidebarWidth)); /*+5px space*/
    bottom: 0rem;
    display: none;
    border-radius: 2rem;
    z-index: 100;
    margin: 0.5rem;
}

#openAudioButton:hover, #openMenuButton:hover{
    color: rgba(1,1,1,0.9);
    background-color: rgba(255, 255, 255, 0.4);
    transition: 0.1s;
}

#redName{
    color:rgba(255, 0, 0, 0.803);
}

#greenName{
    color:rgba(0, 128, 0, 0.803);
}

#blueName{
    color:rgba(0, 0, 255, 0.803);
}

/* AUDIO STYLING */
#audio1{
    width: 100%;
    height: 4rem;
    padding: 0 1rem;
}

#audio1::-webkit-media-controls-panel{
    /* background-color: rgba(0, 0, 0, 0.85); */
    background: var(--textColorCategory);
}

#audio1::-webkit-media-controls-current-time-display{
    color: var(--textColorVariable);
    text-shadow: none;
    font-family: "Audiowide", sans-serif;
}
#audio1::-webkit-media-controls-time-remaining-display{
    color: var(--textColorVariable);
    text-shadow: none;
    font-family: "Audiowide", sans-serif;
    margin-right: 1rem;
}

#audio1::-webkit-media-controls-timeline{
    border-radius: 40px;
    padding: 0.1rem 0rem;
    width: 50%;
    /* background: var(--textColorCategoryAlpha050); */
}

#audio1::-webkit-media-controls-play-button{
    background-color: var(--textColorVariable);
    border-radius: 50%;
}

#audio1::-webkit-media-controls-mute-button{
    background-color: var(--textColorVariable);
    border-radius: 50%;
}

#audio1::-webkit-media-controls-volume-slider{
    /* background-color: var(--textColorCategoryAlpha050); */
    background-color: var(--textColorVariable);
    border-radius: 50px;
    padding-left: 10px;
    padding-right: 10px;
}

